# cpp-linker

./: .clang-tidy  .gitignore  CMakeLists.txt  Readme.md  cppld.md
benchmark/: call_chain.c  gen_bench.cpp
cmake/: Infrastructure.cmake  clang-tidy.cmake
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  argumentsToLinkerParameters.cpp  convenient_functions.hpp  cppld.hpp  cppld_api_types.hpp  cppld_internal_types.hpp  filePathsToMemoyMappings.cpp  lifetime.hpp  linkSourcesToExecutableElfFile.cpp  mapInputSectionsToOutputSections.cpp  mapInputSectionsToOutputSections.hpp  parseInputAndCreateSymbolTable.cpp  parseInputAndCreateSymbolTable.hpp  reference_types.hpp  statusreport.hpp  writeLinkingResultsToFile.cpp  writeLinkingResultsToFile.hpp
test/: CMakeLists.txt  TestSimple.cpp  TestUnits.cpp
